--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,7 @@ repositories {
 }
 
 dependencies {
-	compile 'io.socket:engine.io-client:0.8.3'
-	compile 'io.socket:socket.io-client:0.8.3'
-	compile 'org.json:json:20180130'
+	compile 'org.java-websocket:Java-WebSocket:1.3.8'
 	compile 'com.github.oshi:oshi-core:3.5.0'
 	compile 'org.apache.logging.log4j:log4j-core:2.11.0'
 	compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.0'
